# zapi-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
tests/: conftest.py  test_client.py
zapi_lib/: __init__.py  client.py
